--- a/irc-mine/pom.xml
+++ b/irc-mine/pom.xml
@@ -44,5 +44,10 @@
       <artifactId>json</artifactId>
       <version>20160810</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>20.0</version>
+    </dependency>
   </dependencies>
 </project>
